--- a/app/src/main/res/drawable/custom_log_in_input.xml
+++ b/app/src/main/res/drawable/custom_log_in_input.xml
@@ -6,7 +6,7 @@
         <shape android:shape="rectangle">
             <solid android:color="#ececec"/>
             <corners android:radius="10dp"/>
-            <stroke android:color="@color/secondary_blue" android:width="1dp"/>
+            <stroke android:color="@color/md_blue_300" android:width="1dp"/>
         </shape>
     </item>
 
