--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,5 +7,8 @@
         android:title="Logout" />
     <item
         android:id="@+id/available"
-        android:title="Available" />
+        android:title="Check status"/>
+    <item
+        android:id="@+id/availableList"
+        android:title="Available users" />
 </menu>
