--- a/app/src/main/res/layout/users_item.xml
+++ b/app/src/main/res/layout/users_item.xml
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/imageView_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="102dp"
+        android:layout_height="94dp"
         android:layout_weight="0.1"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -20,18 +20,20 @@
         android:id="@+id/edit_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1.5"
+        android:layout_weight="3"
         android:text="Carlos"
         android:textAlignment="center"
         android:layout_gravity="center"
         android:background="@color/white"
+        android:layout_marginHorizontal="10dp"
         android:textSize="25dp"/>
 
     <Button
         android:id="@+id/button_user_location"
-        android:text="@string/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:onClick="onClickMap"
+        android:text="@string/location" />
 
 </LinearLayout>
