--- a/app/src/main/res/layout/users_item.xml
+++ b/app/src/main/res/layout/users_item.xml
@@ -11,29 +11,27 @@
 
     <ImageView
         android:id="@+id/imageView_user"
-        android:layout_width="102dp"
+        android:layout_width="103dp"
         android:layout_height="94dp"
         android:layout_weight="0.1"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/edit_user_name"
-        android:layout_width="wrap_content"
+        android:layout_width="144dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="10dp"
+        android:background="@color/white"
         android:text="Carlos"
         android:textAlignment="center"
-        android:layout_gravity="center"
-        android:background="@color/white"
-        android:layout_marginHorizontal="10dp"
-        android:textSize="25dp"/>
+        android:textSize="25dp" />
 
     <Button
         android:id="@+id/button_user_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:onClick="onClickMap"
+        android:layout_gravity="center|clip_horizontal"
         android:text="@string/location" />
 
 </LinearLayout>
